fix overflow

--- a/src/App.scss
+++ b/src/App.scss
@@ -2,6 +2,7 @@
 
 .App {
   text-align: center;
+  overflow: hidden;
 }
 
 .App-header {
